# optpricer

./: README.md  pyproject.toml
examples/: convergence.py
src/optpricer/: __init__.py  binomial.py  black_scholes.py  implied.py  montecarlo.py
tests/: test_black_scholes.py  test_cross_validation.py
