[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optpricer"
version = "0.1.0"
description = "Option pricing three ways — analytic Black-Scholes, CRR binomial, variance-reduced Monte Carlo — each method validating the others"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "NPY"]
